# pam_dotfile

./: .gitignore  Makefile.am  bootstrap.sh  configure.ac
doc/: Makefile.am  README.html.in  style.css
man/: Makefile.am  pam-dotfile-gen.1.xml.in  pam-dotfile-helper.8.xml.in  pamtest.1.xml.in
src/: Makefile.am  common.c  common.h  log.c  log.h  md5util.c  md5util.h  pam-dotfile-gen.c  pam-dotfile-helper.c  pam_dotfile.c  pamtest.c
